--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M.G.Davani</title>
     <link rel="shortcut icon" href="./imgs/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="container">
+    <div class="header">
+        <div class="logo">
+            <p class="logo-text">M.G.D</p>
+        </div>
+        <ul class="header-links">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Books</a></li>
+            <li><a href="">Music</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Archive</a></li>
+        </ul>
+    </div>
+    <div class="main">
+
+    </div>
+    </div>
 </body>
 </html>
