--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <p class="logo-text">M.G.D</p>
         </div>
         <ul class="header-links">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Books</a></li>
-            <li><a href="">Music</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="" class="header-link">Home</a></li>
+            <li><a href="" class="header-link">About</a></li>
+            <li><a href="" class="header-link">Books</a></li>
+            <li><a href="" class="header-link">Music</a></li>
+            <li><a href="" class="header-link">Contact</a></li>
         </ul>
     </div>
     <div class="main">
