--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <body>
     <div class="container">
     <div class="header">
+        <!--
         <div class="logo">
             <p class="logo-text">M.G.D</p>
         </div>
+        -->
         <ul class="header-links">
-            <li><a href="" class="header-link">Home</a></li>
+            <li><a href="" class="header-link"><img src="./imgs/logo.png" alt="logo" class="logo"></a></li>
             <li><a href="" class="header-link">About</a></li>
             <li><a href="" class="header-link">Books</a></li>
             <li><a href="" class="header-link">Music</a></li>
