--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
 <body>
     <div class="container">
     <div class="header">
-        <!--
-        <div class="logo">
-            <p class="logo-text">M.G.D</p>
-        </div>
-        -->
         <ul class="header-links">
             <li><a href="" class="header-link"><img src="./imgs/logo.png" alt="logo" class="logo"></a></li>
             <li><a href="" class="header-link">About</a></li>
@@ -26,12 +21,51 @@
     </div>
     <div class="main">
         <div class="content-section">
-            <div class="content">ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. </div>
-            <div class="content">ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. </div>
-            <div class="content">ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. </div>
-            <div class="content">ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. </div>
-            <div class="content">ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. ye chizi toosh mishe nevevesht ya gozasht. </div>
+            <div class="content">
+                <p>salam morteza , ina ro gozashtam ke design page ro bebini.<br>
+                    inja mishe harchi khasti gozasht.<br>
+                    matn , tasivro video <br>
+                    taghirti ke mikhay ro bem begoo ta anjam bedam
+                </p>
             </div>
+            <div class="content">
+                <p>salam morteza , ina ro gozashtam ke design page ro bebini.<br>
+                    inja mishe harchi khasti gozasht.<br>
+                    matn , tasivro video <br>
+                    taghirti ke mikhay ro bem begoo ta anjam bedam
+                </p>
+            </div>
+            <div class="content">
+                <p>salam morteza , ina ro gozashtam ke design page ro bebini.<br>
+                    inja mishe harchi khasti gozasht.<br>
+                    matn , tasivro video <br>
+                    taghirti ke mikhay ro bem begoo ta anjam bedam
+                </p>
+            </div>
+            <div class="content">
+                <p>salam morteza , ina ro gozashtam ke design page ro bebini.<br>
+                    inja mishe harchi khasti gozasht.<br>
+                    matn , tasivro video <br>
+                    taghirti ke mikhay ro bem begoo ta anjam bedam
+                </p>
+            </div>
+            <div class="content">
+                <p>salam morteza , ina ro gozashtam ke design page ro bebini.<br>
+                    inja mishe harchi khasti gozasht.<br>
+                    matn , tasivro video <br>
+                    taghirti ke mikhay ro bem begoo ta anjam bedam
+                </p>
+            </div>
+            <div class="content">
+                <p>salam morteza , ina ro gozashtam ke design page ro bebini.<br>
+                    inja mishe harchi khasti gozasht.<br>
+                    matn , tasivro video <br>
+                    taghirti ke mikhay ro bem begoo ta anjam bedam
+                </p>
+            </div>
+    </div>
+    <div class="footer">
+        <p class="footer-text">© M.G.Davani 2022 A creation by Rahim Dashti</p>
     </div>
     </div>
 </body>
