--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <li><a href="" class="header-link"><img src="./imgs/logo.png" alt="logo" class="logo"></a></li>
             <li><a href="" class="header-link">About</a></li>
             <li><a href="" class="header-link">Books</a></li>
-            <li><a href="" class="header-link">Music</a></li>
+            <li><a href="" class="header-link">Poetry</a></li>
+            <li><a href="" class="header-link">Voice</a></li>
             <li><a href="" class="header-link">Contact</a></li>
         </ul>
     </div>
