about,contact page made

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <div class="container">
     <div class="header">
         <ul class="header-links">
-            <li><a href="" class="header-link"><img src="./imgs/logo.png" alt="logo" class="logo"></a></li>
-            <li><a href="" class="header-link">About</a></li>
-            <li><a href="" class="header-link">Books</a></li>
-            <li><a href="" class="header-link">Poetry</a></li>
-            <li><a href="" class="header-link">Voice</a></li>
-            <li><a href="" class="header-link">Contact</a></li>
+            <li><a href="./index.html" class="header-link"><img src="./imgs/logo.png" alt="logo" class="logo"></a></li>
+            <li><a href="./pages/about.html" class="header-link">About</a></li>
+            <li><a href="./pages/books.html" class="header-link">Books</a></li>
+            <li><a href="./pages/poetry.html" class="header-link">Poetry</a></li>
+            <li><a href="./pages/voice.html" class="header-link">Voice</a></li>
+            <li><a href="./pages/contact.html" class="header-link">Contact</a></li>
         </ul>
     </div>
     <div class="main">
