updated html and css

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,32 +23,27 @@
     <div class="main ">
         <div class="content-section">
             <div class="content">
-                <p>Morteza Gholamnezhad Davani Biography <br> <br> <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
-                    ansdklasndkanldnakldnakls'dladklasndklankldaskldnaklddasdasdasdsad <br>
+                <p>M.G.Davani Biography<br> <br> <br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
+                    abcdefghijklmnopqrstuvwxyz<br>
                 </p>
             </div>
     </div>
