--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,7 +22,7 @@
     </div>
     <div class="main ">
         <div class="content-section">
-            <div class="content">
+            <div class="content contact-box">
                 <form action="" method="post">
                     <div class="contact-name content-sections name-email">
                         <label for="name">Name</label>
