--- a/pages/about.html
+++ b/pages/about.html
@@ -23,27 +23,19 @@
     <div class="main ">
         <div class="content-section">
             <div class="content">
-                <p>M.G.Davani Biography<br> <br> <br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
-                    abcdefghijklmnopqrstuvwxyz<br>
+                <p>M.G.Davani Biography<br> <br>
+                    abcdefghijklmnopqrstuvwxyz.
+                    abcdefghijklmnopqrstuvwxyz.
+                    abcdefghijklmnopqrstuvwxyz.
+                    abcdefghijklmnopqrstuvwxyz.
+                    abcdefghijklmnopqrstuvwxyz.
+                    abcdefghijklmnopqrstuvwxyz.
+                    abcdefghijklmnopqrstuvwxyz.
+                    abcdefghijklmnopqrstuvwxyz.
+                    abcdefghijklmnopqrstuvwxyz.
+                    abcdefghijklmnopqrstuvwxyz.
+                    abcdefghijklmnopqrstuvwxyz.
+                    abcdefghijklmnopqrstuvwxyz.
                 </p>
             </div>
     </div>
