updated design texts

--- a/pages/books.html
+++ b/pages/books.html
@@ -23,19 +23,14 @@
     <div class="main ">
         <div class="content-section">
             <div class="content">
-                <p>M.G.Davani Book<br> <br>
-                    abcdefghijklmnopqrstuvwxyz.
-                    abcdefghijklmnopqrstuvwxyz.
-                    abcdefghijklmnopqrstuvwxyz.
-                    abcdefghijklmnopqrstuvwxyz.
-                    abcdefghijklmnopqrstuvwxyz.
-                    abcdefghijklmnopqrstuvwxyz.
-                    abcdefghijklmnopqrstuvwxyz.
-                    abcdefghijklmnopqrstuvwxyz.
-                    abcdefghijklmnopqrstuvwxyz.
-                    abcdefghijklmnopqrstuvwxyz.
-                    abcdefghijklmnopqrstuvwxyz.
-                    abcdefghijklmnopqrstuvwxyz.
+                <p>
+                    M.G.D <br><br>
+                    abcdefg <br>
+                    abcdefg <br>
+                    abcdefg <br>
+                    abcdefg <br>
+                    abcdefg <br>
+                    abcdefg <br>
                 </p>
             </div>
     </div>
