updated contact form

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,15 +26,15 @@
                 <form action="" method="post">
                     <div class="contact-name content-sections name-email">
                         <label for="name">Name</label>
-                        <input type="text" name="name" id="name" class="input-area">
+                        <input type="text" name="name" id="name" class="input-area" required>
                     </div>
                     <div class="contact-email content-sections name-email">
                         <label for="email">Email</label>
-                        <input type="email" name="email" id="email" class="input-area">
+                        <input type="email" name="email" id="email" class="input-area" required>
                     </div>
                     <div class="contact-text content-sections">
                         <label for="messege" class="contact-section input-area text-section">Your Messege</label>
-                        <textarea name="messege" id="messege" cols="30" rows="10" class="contact-section text-section"></textarea>
+                        <textarea name="messege" id="messege" cols="30" rows="10" class="contact-section text-section" required></textarea>
                     </div>
                     <div class="contact-button-section content-sections">
                         <button type="submit" class="contact-button">Send</button>
