updated contact action

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,7 +23,7 @@
     <div class="main ">
         <div class="content-section">
             <div class="content contact-box">
-                <form action="" method="post">
+                <form action="https://formspree.io/f/xyyonzbe" method="post">
                     <div class="contact-name content-sections name-email">
                         <label for="name">Name</label>
                         <input type="text" name="name" id="name" class="input-area" required>
