--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,7 +33,7 @@
                         <input type="email" name="email" id="email" class="input-area" required>
                     </div>
                     <div class="contact-text content-sections">
-                        <label for="messege" class="contact-section input-area text-section">Your Messege</label>
+                        <label for="messege" class="contact-section text-section">Your Messege</label>
                         <textarea name="messege" id="messege" cols="30" rows="10" class="contact-section text-section" required></textarea>
                     </div>
                     <div class="contact-button-section content-sections">
